fixes for bugs.